# complx-tools

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  complx-tools-config.cmake  configure
.github/workflows/: nightly-build  nightly-build.yml  run-tests-windows.yml  run-tests.yml  superlinter.yml
cmake/: CompileOptions.cmake
deploy/ubuntu-ppa/debian/: control  rules
docs/: DebuggingComments.txt
source/: CMakeLists.txt
source/complx/: AdvancedLoadDialog.cpp  AdvancedLoadDialog.hpp  CMakeLists.txt  ComplxApp.cpp  ComplxFrame.cpp  ComplxFrame.hpp  ExecuteOptions.hpp  LoadingOptions.hpp  MemoryView.cpp  MemoryView.hpp  MemoryViewFrame.cpp  MemoryViewFrame.hpp
source/complx/builder/: ComplxFrameDecl.fbp
source/complx/data/: MemoryViewDataModel.cpp  ProcessStatusRegisterProperty.cpp  RegisterProperty.cpp
source/complx/util/: ValidationHelper.cpp  ValidationHelper.hpp
source/lc3/: CMakeLists.txt
source/lc3/include/lc3/: ExpressionEvaluator.hpp  lc3.hpp  lc3_assemble.hpp  lc3_debug.hpp  lc3_execute.hpp  lc3_expressions.hpp  lc3_os.hpp  lc3_params.hpp  lc3_plugin.hpp  lc3_runner.hpp
source/lc3/source/: ExpressionEvaluator.cpp  lc3.cpp  lc3_assemble.cpp  lc3_debug.cpp  lc3_execute.cpp  lc3_expressions.cpp  lc3_os.cpp  lc3_osv1.cpp  lc3_osv2.cpp  lc3_params.cpp  lc3_plugin.cpp  lc3_runner.cpp
source/lc3/source/os/: generate_lc3_os_c_file.py  lc3_os.asm  lc3_os2.asm
source/lc3_replay/: CMakeLists.txt
source/lc3_replay/include/lc3_replay/: BinaryStreamReader.hpp  lc3_replay.hpp
source/lc3_replay/source/: BinaryStreamReader.cpp  lc3_replay.cpp
source/lc3as/: main.cpp
source/logging/: CMakeLists.txt
source/plugins/devices/lc3_random/: CMakeLists.txt  random.cpp  random.hpp
source/plugins/devices/lc3_second_timer/: CMakeLists.txt  second_timer.hpp
source/plugins/devices/lc3_timer/: CMakeLists.txt  timer.hpp
source/plugins/instructions/lc3_multiply/: CMakeLists.txt  multiply.cpp  multiply.hpp
source/plugins/other/lc3_bwlcd/: CMakeLists.txt  bwlcd.cpp  bwlcd.hpp
source/plugins/other/lc3_colorlcd/: CMakeLists.txt  colorlcd.cpp  colorlcd.hpp
source/plugins/other/lc3_pinger/: CMakeLists.txt  pinger.hpp
source/plugins/traps/lc3_udiv/: CMakeLists.txt  udiv.hpp
source/pylc3/: CMakeLists.txt
source/tests/: .gitignore  CMakeLists.txt
source/tests/lc3/: CMakeLists.txt  lc3_params_test.cpp
source/tests/lc3_test/: CMakeLists.txt  lc3_assemble_test.cpp  lc3_basic_test.cpp  lc3_params_test.cpp  lc3_parser_test.cpp  lc3_plugins_test.cpp  lc3_replay_test.cpp  lc3_revision_2019_test.cpp
